--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,9 +1,8 @@
 .profile {
-  background-color: #e7ecf2;
-  padding: 100px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 40px 0px;
 }
 .description {
   padding-top: 40px;
@@ -26,7 +25,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  width: 100%;
+  width: 800px;
   margin: 0;
   padding: 0;
   background-color: #f3f6f9;
